# magnum-game-of-life

./: CMakeLists.txt  README.md
src/: ArcBall.cpp  BackendGameOfLife.cpp  BackendGameOfLife.h  CMakeLists.txt  GameOfLife.cpp  GameOfLife2d.cpp  GameOfLifeCUDA2d.cpp  GameOfLifeCUDA2d.cu  GameOfLifeCUDA2d.h  GameOfLifeCUDA3d.cpp  GameOfLifeCUDA3d.cu  GameOfLifeCUDA3d.h  Queue_Safe.h  TODO.md  backend-game-of-life.h  main.cpp
